--- a/001.md
+++ b/001.md
@@ -1,4 +1,5 @@
 # 资源
+---
 
 1. [windows窗口消息大全](https://bbs.aardio.com/forum.php?mod=viewthread&tid=7776&highlight=%CF%FB%CF%A2) 使用aardio编程时，常用控件的消息大全，需要时可查阅。
 
@@ -16,5 +17,37 @@
 
 8. [数据结构和算法动态可视化 (Chinese)](https://visualgo.net/zh) 
 
-# 电影
 
+# 电影
+---
+
+[隐入尘烟](https://movie.douban.com/subject/35131346/?from=showing)
+
+![[Pasted image 20220903110913.png]]
+
+好久没看到描写农村的电影了。斗牛、我不是王毛、心迷宫、追凶者也。气质很类似，脏兮兮的，但是有生命力。作为农村出身的人，我喜欢看描写农村的好电影。
+
+剧情很平缓，没啥意思，但是我喜欢。
+
+
+[横道世之介](https://movie.douban.com/photos/photo/1826486066/)
+
+![[Pasted image 20220903111449.png]]
+
+B站看的一部日本老片，剧情也很平缓，但是很治愈。女主角笑起来太美了啊。
+
+
+# 软件
+---
+
+1. [CopyTranslator](https://github.com/CopyTranslator/CopyTranslator/blob/master/README_zh.md)
+
+非常强大的一款工具，阅读英文PDF时，复制一大段文字，自动监听剪贴板，翻译为中文。排版良好，效率大大提高。强烈推荐。
+
+2. [flomo](https://help.flomoapp.com/basic/app.html)
+
+浮墨笔记，绑定公众号后，可以很方便的存储一些碎片化信息，比如看到有趣的文章，临时的灵感等等。多端同步，可以按标签搜索。
+
+3. [obsidian](https://forum-zh.obsidian.md/)
+
+Obsidian是基于Markdown文件的本地知识管理软件，个人用起来觉得操作比较简洁实用，不像很多笔记软件搞的非常复杂。本文就是通过Obsidian编辑。
