--- a/002.md
+++ b/002.md
@@ -1,37 +1,115 @@
-# 资源
+# 沧海周报 002@2022.09.10
 
-https://www.16yun.cn/help/  
+## 这是啥
 
-爬虫代理， 客服响应很及时。
+这里记录每周我所见所思，有用有趣之处，择其要点而记录。
 
-https://www.r5.cn/course-10.html
+目的：
 
-【编程猫】JS逆向系列教程
+1、 方便自己日后回顾，有需要时可以全文检索。
 
-https://docs.mitmproxy.org/stable/
+2、如果能有所传播，可以结交志同道合的朋友。
+
+**今日中秋，祝幸福安康。**
+
+![](https://user-images.githubusercontent.com/51389397/189466540-c57d53ce-8022-4622-961c-8b3ef957c3e4.png)
+
+图片由Stable Diffusion v1.5生成：World of Warcraft Westfall, lighthouse by the sea, night, full moon, silver waves, autumn, watercolor.
+
+## 资源
+
+1、[亿牛云](https://www.16yun.cn/help/ )
+
+一个我用过一段时间的爬虫代理， 客服响应很及时。
+
+2、[【编程猫】JS逆向系列教程](https://www.r5.cn/course-10.html)
+
+还没来得及看，做爬虫相关的，懂一点前端逆向很有必要，需要花时间补一点课。
+
+3、[mitmproxy](https://docs.mitmproxy.org/stable/)
 
 mitmproxy 是一组工具，为 HTTP/1、HTTP/2 和 WebSockets 提供交互式、支持 SSL/TLS 的拦截代理。
 
-https://www.valueline.com/
+4、[Value Line](https://www.valueline.com/)
 
 90 年来，Value Line 一直提供公正、独立的研究，我们专有的 Value Line 排名系统经过时间考验，其他人根本没有。我们著名的单页报告包含您需要了解的关于我们关注的大约 1,700 只股票中的任何一只的所有信息。
 
+看巴菲特还有李录的书里面，经常有提到这个杂志。网站也做的很棒。特别是在一个页面上，把一只股票的重点数据都展示出来了，偏向于价值投资的中长期投资者。我有想过做一个国内版的产品，但是自我感觉储备还不足够实现。
 
-https://bootstrapdoc.com/  Bootstrap5 中文文档
+5、[Bootstrap5 中文文档](https://bootstrapdoc.com/)  
 
-https://tdesign.tencent.com/
+做一些简单页面时，Bootstrap不会让你失望，开箱即用，简单省事。
 
-http://datatables.club/ 
+5、[tdesign](https://tdesign.tencent.com/)
 
-https://www.bilibili.com/video/BV1W4411D7VE?p=2&spm_id_from=333.1007.top_right_bar_window_history.content.click
+腾讯开源的一套企业级UI组件库。我的桌面端软件中借鉴了它的配色方案。
 
-https://icons.getbootstrap.com/#install
+6、[ Datatables中文网](http://datatables.club/ )
 
-https://themes.getbootstrap.com/
+Datatables是一款jquery表格插件。它是一个高度灵活的工具，可以将任何HTML表格添加高级的交互功能。我的桌面端软件使用了此框架，功能的确很强大，并且API很简洁。
 
-http://www.pearadmin.com/
+7、[中华人民共和国第九套广播体操](https://www.bilibili.com/video/BV1W4411D7VE?p=2&spm_id_from=333.1007.top_right_bar_window_history.content.click)
 
-https://gitee.com/ayq947/ayq-layui-form-designer
+天天坐在电脑前，浑身僵硬，可以上下午各做一次。跟着视频操作，步骤很清晰。
 
-https://ballance.jxpxxzj.cn/index.php?title=Ballance%E5%90%A7%E5%AF%BC%E8%88%AA%E8%B4%B4&_c=
+8、[Bootstrap Icons](https://icons.getbootstrap.com/#install)
 
+免费、高质量、开源的图标库，包含 1,600 多个图标。
+
+9、[Pear Admin Layui](http://www.pearadmin.com/)
+
+Pear Admin Layui 是一个快速，简介且高效的前端框架，使用 Layui 开发，通过简单的初始化配置，即可生成符合您项目需求的布局与样式，提供大量开箱即用的前端组件。
+
+我有一个代理商后台网站，就是用这个框架开发的，的确省了很多手写的时间，非常感谢。
+
+10、[Ballance吧导航贴](https://ballance.jxpxxzj.cn/index.php?title=Ballance%E5%90%A7%E5%AF%BC%E8%88%AA%E8%B4%B4&_c=)
+
+Ballance平衡球游戏，05年我上大学时玩过的一个桌面小游戏。B站有一些高手玩家视频，令人叹为观止，看起来非常解压。
+
+11、[GitHub中文排行榜](https://github.com/GrowingGit/GitHub-Chinese-Top-Charts)
+
+帮助你发现优秀中文项目，可以无语言障碍地、更高效地吸收优秀经验成果。
+
+12、[tokyodev](https://www.tokyodev.com/)
+
+TokyoDev 是一个致力于帮助国际开发人员在日本开始和发展他们的职业生涯的网站。我们通过一个面向日本英语软件开发人员的[工作委员会](https://www.tokyodev.com/)、有关在这里找到工作的[文章、](https://www.tokyodev.com/blog/archives/)[一个](https://discuss.tokyodev.com/)讨论日本开发人员生活的论坛以及在这里工作的国际开发人员[的故事来做到这一点。](https://www.tokyodev.com/interviews/)
+
+## 工具
+
+1、[文章同步助手](https://www.wechatsync.com/index.html)
+
+一个浏览器插件。可以将文章同步到公众号、知乎、头条、搜狐号等多个自媒体平台。最近在使用这款工具，但是感觉排版还是会有一些错误。没有更好的工具情况下，先继续用这款。
+
+2、[Stable Diffusion](https://beta.dreamstudio.ai/home)
+
+AI 图像生成器，输入文字，生成AI图片。可以免费注册，新用户有免费额度。项目开源，可以自行部署。
+
+## 文章
+
+1、[2021 年调查结果](https://www.tokyodev.com/insights/2021-developer-survey/)
+
+2021 年 11 月，我们向居住在日本的 435 名国际软件工程师询问了他们的薪水、工作条件和使用的技术，以更好地帮助您了解在日本工作的感觉。
+
+2、[Tailwind CSS：从副产品到数百万美元的业务](https://adamwathan.me/tailwindcss-from-side-project-byproduct-to-multi-mullion-dollar-business/)
+
+Tailwind框架作者写的一篇文章，回顾了他们的发展历程。读起来非常好，多年前的一个无疾而终的副业项目，可能会在多年后开出一朵意料之外的花朵。技术人员，创造优良的产品，得到丰厚的回报，有尊严的生活。这是我想要的生活。
+
+3、[作为软件工程师成为全职创作者：有争议的建议](https://blog.pragmaticengineer.com/how-to-become-a-full-time-creator/)
+
+美国的一个技术博客作者，他的文章写的都很不错。我发现，国外的个人博客非常活跃，页面美观，文章质量好，沟通坦诚。而反观国内，不说了，懂得都懂。
+
+![[Pasted image 20220910115043.png]]
+
+4、[EXCEL TIKTOKER 如何展示她每天赚六位数的方式](https://www.theverge.com/22807858/tiktok-influencer-microsoft-excel-instagram-decoder-podcast)
+
+一个美国姑娘在TikTok上教人Excel，有上百万粉丝。通过卖课程，实现每天六位数的收入，美元。
+
+## 金句
+
+1、许多传统的“创作者”试图纯粹靠社交媒体谋生。他们是每周发布几次视频、播放赞助视频的 YouTube 用户。拥有数百万追随者的 Instagram 用户也在做同样的事情。随着算法开始减少显示他们的内容，这些人中的许多人不可避免地要么精疲力尽，要么失去收入来源。
+
+2、医院最喜欢的病人是慢性病患者，他们依赖医院，但是又不会很快病死而不能支付账单。美国的医疗体系依靠患者赚钱，因此预防疾病并不积极，只有2.9%的医疗支出用于预防医学。这造成的结果就是，病人的寿命虽然长，但是健康的时间并不长。
+
+3、成长很重要，但有时更重要的是生存足够长的时间来找到那些拐点。如果你的时间足够长，机会可能会出现在你面前。但是，如果您尝试过快发展并达到盈亏平衡点并且过度扩张，您的公司可能会倒闭或声誉不佳。
+
+4、当其他创始人向我寻求帮助时，我经常给他们的建议是，你必须出售一种体验、一种生活方式、一个品牌。如果你卖商品，那么亚马逊每次都会打败你，所以你必须做一些不同的事情。
