--- a/001.md
+++ b/001.md
@@ -10,6 +10,22 @@
 
 2、如果能有所传播，可以结交志同道合的朋友。
 
+
+
+## 我是谁
+
+沧海，现居福建厦门，独立软件开发者。
+
+技术栈：
+
+- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
+- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
+- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
+
+如有沟通与合作，请发邮件到 **534929089#qq.com**
+
+
+
 ## 资源
 
 1、 [windows 窗口消息大全](https://bbs.aardio.com/forum.php?mod=viewthread&tid=7776&highlight=%CF%FB%CF%A2)
