--- a/002.md
+++ b/002.md
@@ -10,9 +10,23 @@
 
 2、如果能有所传播，可以结交志同道合的朋友。
 
-**今日中秋，祝幸福安康。**
 
-![](https://raw.githubusercontent.com/theseazhang/weekly_news/main/img/11.png)
+
+## 我是谁
+
+沧海，现居福建厦门，独立软件开发者。
+
+技术栈：
+
+- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
+- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
+- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
+
+如有沟通与合作，请发邮件到 **534929089#qq.com**
+
+
+
+![](https://dqprop.oss-cn-hangzhou.aliyuncs.com/img/11.png)
 
 图片由Stable Diffusion v1.5生成：World of Warcraft Westfall, lighthouse by the sea, night, full moon, silver waves, autumn, watercolor.
 
