--- a/005.md
+++ b/005.md
@@ -20,9 +20,9 @@
 
 技术栈：
 
-- 用Aardio开发windows桌面软件，擅长爬虫和自动化。
-- 后端：Python的flask框架，openresty和一点点lua
-- 前端：简单的html+css，目前在学习tailwind css和vue3
+- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
+- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
+- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
 
 如有沟通与合作，请发邮件到 **534929089#qq.com**
 
