--- a/014.md
+++ b/014.md
@@ -50,4 +50,4 @@ Amazon 儿童版 Top100 书单。
 
 我想推荐的是他们的手机应用 Kids A-Z，这个不但可以用于儿童英语学习，对于大人重新学习英语也可以说是非常理想的分级阅读起点。
 
-本周我测试使用了[上周日志](https://github.com/theseazhang/weekly_news/blob/main/013.md)提到的英语分级阅读方法，这一周可以说是我从小到大学习英语以来，效果最大、压力最小、学会的单词最多，并且学习上瘾的一周。虽然仅仅开始一周，我可以说这个方法是英语学习的康庄大道。回想下我从小到大的学习经历，其实就是大量阅读闲书的收获，只是自己并没有意识到。通过观察我女儿的文字掌握水平，可以清晰发现，很多字词和表达句法，都是没人教过，完全是她天天刷短视频自然习得的。我现在头疼的点，就是怎么将她的阅读兴趣从短视频转移到纸质书上。
+本周我测试使用了[上周日志](https://github.com/theseazhang/weekly_news/blob/main/013.md)提到的英语分级阅读方法，这一周是我从小到大学习英语以来，效果最大、压力最小、学会的单词最多，并且学习上瘾的一周。虽然仅仅开始一周，我断言这个方法是英语学习的康庄大道。回想下我从小到大的学习经历，其实就是大量阅读闲书的收获，只是自己并没有意识到。通过观察我女儿的文字掌握水平，可以清晰发现，很多字词和表达句法，都是没人教过，完全是她天天刷短视频自然习得的。我现在头疼是怎么将她的阅读兴趣从短视频转移到纸质书上。
