--- a/015.md
+++ b/015.md
@@ -22,8 +22,6 @@
 
 如有沟通与合作，请发邮件到 **dylanzhangdev#outlook.com**
 
-## 软件
-
 ## 网站
 
 1、[learngpt](https://www.learngpt.com/)
@@ -46,4 +44,28 @@
 
 全球最大的在线读书社区和书评网站，类似于国内的豆瓣读书。访问此网站需要施放魔法。
 
-## 英语
+6、[defensivecss](https://defensivecss.dev/)
+
+此网站提供一些常见防御性CSS的写法，也就是如何避免页面布局中的意外状况，比如文本过长或者图片拉伸等。
+
+## 文章
+
+1、[What is the best income stream you have created till date?](https://news.ycombinator.com/item?id=33923137)
+
+这个Hacker News上的讨论帖给了我很多启发，世界很大，拥有非常多的可能性。这也是为什么我要重新学习英语。世界广阔，去寻找水草丰茂之地，而不是在盐碱化的土地中刨食。
+
+本周仅此一篇足以。
+
+## AI
+
+本周的科技新闻，绕不开ChatGPT。我试用了一下，的确非常惊艳。目前我觉得比较有用的用途可能有：
+
+1、帮助程序员生成一些比较简单的模版代码，或者作为搜索引擎的替代。
+
+2、帮助内容创作者提供一些素材和创意思路。
+
+就像预制菜一样，已经很方便了，开箱即用，但是还需要人工最后再烹饪一下。即使这样也已经大大节省时间了，是效率的极大提升，随着AI的版本升级，离真正商用估计不远了。
+
+如果你仅仅只想体验一下，可以用[chat.bygpt](https://chat.bygpt.com/)试试，无需注册账号和施放魔法。
+
+AI在人脸识别、语音生成、翻译等很多领域，已经有很大规模的应用，但是对普通人，还是缺少直观的感受。从今年当红的AI画画和ChatGPT来说，作为一个普通网民，可以享受AI的便利性，如果拥有一些深入学习的意愿和能力，甚至可以帮助生产和生活。我认为下一个10年的时代浪潮已经到了，正如2000年后那段PC互联网风起云涌的时候一样，网站+各行各业创造了很多财富和新的机会，现在是AI+各行各业。虽然不知道风怎么吹，但是风已经来了。现在需要做的就是去不断学习、不断追逐，找到自己的那艘船，乘风破浪。
