--- a/016.md
+++ b/016.md
@@ -22,17 +22,25 @@
 
 如有沟通与合作，请发邮件到 **dylanzhangdev#outlook.com**
 
-## 资源 
+## 资源
 
-https://www.mongodb.com/atlas
+下面是几个关于网站托管的免费资源列表，如果是练手或者做产品原型，可以快速上线，并且维护比较简单。
 
-firebase https://firebase.google.cn/
+1、[mongodb atlas](https://www.mongodb.com/atlas)
 
-https://fly.io/docs/about/pricing/
+mongodb 的云数据库，有免费计划。
 
-https://vercel.com/
+2、[firebase](https://firebase.google.cn/)
 
+谷歌的 firebase，免费的数据库和 API。Hacker News 的官方 API 就是使用的 firebase
 
+3、[fly.io](https://fly.io/docs/about/pricing/)
+
+fly.io 提供 3 个免费容器。
+
+4、[vercel](https://vercel.com/)
+
+Next.js 的母公司，免费提供 3 个前端网站托管，部署非常方便。
 
 ## 网站
 
@@ -40,41 +48,68 @@ https://vercel.com/
 
 一个使用[zola](https://github.com/getzola/zola)生成的静态个人网站，具有非常舒服的主题。开发者以销售个人自行出版的编程电子书作为副业收入。看起来也是一个不错的路径。
 
-案例 https://www.cadclass.org/courses/CAD  
+这里还有一个案例，是自己录制 CAD 课程并自建网站售卖的，运行了非常多年：[cadclass](https://www.cadclass.org/courses/CAD)
+
+在某一个领域有深刻的理解，并能很好的表达出来。通过构建电子产品，可以实现边际成本近乎为 0 的长期销售，当然前提是要处于一个知识产权受到尊重，用户付费意愿强、付费能力高的市场。中文互联网环境并不是太友好。
 
 2、[electron Showcase](https://www.electronjs.org/zh/apps/)
 
-看一下哪些知名的项目使用electron做客户端。electron作为前端跨平台方案，还是很不错的。最近QQ电脑版也转向了这一阵营。
+看一下哪些知名的项目使用 electron 做客户端。electron 作为前端跨平台方案，还是很不错的。最近 QQ 电脑版也转向了这一阵营。
 
-3、https://www.indiehackers.com/
+3、[indiehackers](https://www.indiehackers.com/)
 
-4、https://remoteok.com/
+> 向数百家盈利的在线企业背后的创始人学习，并与正在创办和发展自己公司的其他人建立联系。
 
-https://www.saashub.com/
+4、[remoteok](https://remoteok.com/)
 
-https://ipinfo.io/
+一个展示远程工作招聘的网站。但是我发现如果英语不够好的话，难度非常大，僧多粥少的局面，这一点印度三哥们比我们有优势，他们英语更好，并且三哥们比我们还能卷。
 
-## 文章
+5、[saashub](https://www.saashub.com/)
 
-1、[](https://news.ycombinator.com/item?id=33942558)
+一个搜集展示各种 SaaS 产品，并提供比较和评论的网站。
+
+6、[ipinfo](https://ipinfo.io/)
+
+查询 IP 所属信息的一个网站。
+
+7、[convertkit](https://convertkit.com/features)
+
+2013 年作为一个副业开始的电子邮件营销工具。在开始的两年，MRR 为 2000 美元，然后停滞不前。2015 年全职投入后，涨到 10 万美元，2016 年达到 50 万美元的 MRR。而现在是一个年收入 3300 万美元的 68 人公司。
+
+很多 SaaS 产品都不是一开始就很能赚钱的，可能需要漫长的打磨和等待。
+
+8、[scrapingfish](https://scrapingfish.com/buy)
+
+一个国外的爬虫代理网站，使用的是手机 4G 网络 IP。国外也有很多爬虫需求，像 Facebook 这种大网站，反爬技术不比淘宝、拼多多这些国内巨头差。他们这个请求价格实在是贵。不过[这篇文章](https://scrapingfish.com/blog/byo-mobile-proxy-for-web-scraping)提供了一个很好的思路：使用手机 4G 网络 IP，如果能构建一个稳定的爬虫代理服务，应该是质量最好的，各大网站对手机 IP 的容忍度是最高的。市面上很多代理 IP 基本都被这些大公司标记了，根本没法用。
+
+9、[online-solitaire](https://online-solitaire.com/free-games)
+
+一个免费纸牌游戏网站，靠广告盈利。每个月有 100 万的 UV，据作者说每个月可以有几万美元的收入。
+
+作者在一个 Hacker News 的讨论帖子中分享了他寻找产品开发点子的思路，很值得借鉴。他去 Mac App Store 中寻找那些下载量很大，但是评分很低，用户评价很差的产品来尝试开发。下载量大，代表有市场有需求，评价差，说明当前的需求不能很好的满足，有产品改进的空间。如果你找不到好的产品创意，这真的是一个很好的思路。你可以去各大平台的应用市场看看，有没有这样的的需求，而你恰好又能做的，找到这样一个交集。
 
 ## AI
 
+怎么利用 AI 赚钱呢？这里有几个利用 AI 图像生成创业的小型项目可以作为参考。通常的模式是从小处着手，快速构建最小 MVP，推向市场，推广、验证、调整。
 
-## 其他 
+[AI 头像生成](https://portret.ai/)
 
+[AI 头像生成](https://avatarai.me/?promo=christmas)
 
-方法 https://online-solitaire.com/free-games 
+[AI 头像生成](https://photoshot.app/)
 
-https://convertkit.com/features
+[在 Notion 中快捷生成图像](https://slashdreamer.com/)
 
-https://scrapingfish.com/buy
+[用 AI 为文章生成配图](https://articletoimage.ai/)
 
-https://scrapingfish.com/blog/byo-mobile-proxy-for-web-scraping
+## 文章
 
+1、[免费开发 20 年，矮人要塞上架 Steam 后大卖 30 万份](https://www.pcgamer.com/after-spending-20-years-simulating-reality-the-dwarf-fortress-devs-have-to-get-used-to-a-new-one-being-millionaires/)
 
-ai 商业化 
+矮人要塞是一款像素风格的开放世界沙盒游戏，由一对亲兄弟独自开发了 20 年，为爱发电，他们拒绝商业化，纯个人开发，仅仅依靠铁杆玩家的每月几千美元的捐赠维持生计。但是由于其中一个作者健康出了问题，为了筹措医疗费用，他们开发了 Steam 版，一经推出，一周卖了 30 万份，大概收入 600 万美元。这是本周我看过的文章中最喜欢的一个故事，我做不到这样的事情，但是我敬佩他们纯粹的精神，并且为他们有好的结果感到高兴。
 
-https://88stacks.com/
+2、[那些有赚钱副业的人，你是怎么想到这个主意的？](https://www.seazhang.com/ask-hn/33942558)
 
-https://portret.ai/
+本周比较有干货的帖子，有很多启发点。
+
+我发现 Hacker News 的 Ask HN 栏目经常有很多高价值的讨论，但是这个网站无法直接访问，需要施法非常不方便。所以我使用官方 API 做了一个镜像，挂在我自己的博客里面，并且对界面做了美化。试用了几天我感觉效果非常不错，如果你有需要可以试试：[Ask HN - A Hacker News Mirror](https://www.seazhang.com/ask-hn)
