--- a/018.md
+++ b/018.md
@@ -24,6 +24,8 @@
 
 ## 新冠
 
-这一整周，没干别的，一直在跟新冠做斗争，特此记录下。
+从 12 月 24 日下午开始发作，到今天下午抗原检测呈阴性，正好一周时间，这一周基本没干别的，一直在跟病毒做斗争。周报已经更新了 17 周，特别今天又恰好是 2022 年的最后一天，我实在不想断更，就记录下新冠的感受吧。
 
-12月24日中午吃完饭，开始感觉全身发冷、头晕，于是赶紧躺了一下午。明显感觉到发烧和肌肉疼痛，尤其是两个屁股蛋，
+我最难熬的应该是前两天，肌肉疼痛，尤其是 2 个屁股，疼的睡都睡不着。吃布洛芬和洛索洛芬后可以缓解 2-3 小时，洛索洛芬感觉会更有效。熬过最开始 2 天，感觉后面就是常规感冒流程了：低烧、畏寒、冒虚汗、流鼻涕、鼻塞、喉咙干痒、咳痰等等。第三天开始嘴角开始起水泡，查了下说是单纯孢疹，免疫力低下容易出现。中间 2 天最难受的就是上火，嘴角起泡，口腔内也生疮，牙疼。吃了几天牛黄解毒片，好转很多。最近这两三天还有一些轻微咳嗽，体虚乏力，随便一动就是全是虚汗，还有嗜睡。晚上 9 点多就困了，能睡到早上 8 点多。白天还是想躺着，混混沉沉又睡了两天。到今天下午感觉整个人舒服多了，测了一下，果然转阴了。这一波病毒，算是扛过去了。
+
+想说点啥，又不知道该说点啥。有很多话想写下来，可是又不知道该怎么表达。病毒从自己身上走过一轮，不再是一个比较远的模糊的概念，它发生的时候，难受是如此具体。但是一旦过去，那些难受好像隔了一层滤镜，也逐渐模糊了。如果再过 5 年 10 年，我可能还记得住的感受就是工作室中午的阳光很好，隔着玻璃，晒在身上出一身汗。就像我现在回忆起 2020 年的春节，疫情刚开始时，我被隔离在老家 40 多天。现在具体的事情和当时的心情我都不记得了，我只记得有天下午，太阳也是非常好，我推着父亲的轮椅，走在乡间的土路上，麦苗青青，河边的杨柳好像发芽了，有黑色的鸟在麦地上飞过。没什么风，阳光照在父亲的棉袄和脸上，热乎乎的。好几年来，那是我陪伴父母最长的一个春节，往年一般三五天就走了。那也是我和父亲在一起的最后一个春节。
