--- a/003.md
+++ b/003.md
@@ -2,29 +2,7 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
-- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
-
-如有沟通与合作，请发邮件到 **534929089#qq.com**
-
-
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 本周思考：数学教育是个好赛道
 
@@ -38,9 +16,9 @@
 
 4、目标人群固定，以学校和班级为节点，通过教师或者家长中的意见领袖，优秀产品的推广很容易裂变。
 
-举2个例子：
+举 2 个例子：
 
-1、在日本和台湾受追捧的公文式数学，KUMON集团1958年创立，现在已经是员工3800人，年销售额763亿日元，利润118亿日元的大型教育集团，数十年长盛不衰。
+1、在日本和台湾受追捧的公文式数学，KUMON 集团 1958 年创立，现在已经是员工 3800 人，年销售额 763 亿日元，利润 118 亿日元的大型教育集团，数十年长盛不衰。
 
 2、现在国内比较流行的新加坡数学，我在当当网买了一套，目前在教小孩每天做几页练习册。教材的编排的确不错。其出版公司，也是搞了几十年的数学教辅，很有一套。
 
@@ -50,15 +28,15 @@
 
 1、[字节跳动静态资源公共库](https://cdn.bytedance.com/)
 
-我的一个教程站点用了docsify，官方cdn是国外的，有一段时间无法访问。字节这个公共cdn可以作为替代品。
+我的一个教程站点用了 docsify，官方 cdn 是国外的，有一段时间无法访问。字节这个公共 cdn 可以作为替代品。
 
 2、[coolbackgrounds](https://coolbackgrounds.io/)
 
-一个可以生成5种背景特效的网站，可以自定义颜色，比较炫酷。
+一个可以生成 5 种背景特效的网站，可以自定义颜色，比较炫酷。
 
 3、[designstripe/](https://designstripe.com/)
 
-一个创建插图的SaaS产品，不知道国内有没有类似产品，这里面可能存在套利空间。
+一个创建插图的 SaaS 产品，不知道国内有没有类似产品，这里面可能存在套利空间。
 
 4、[howmanyplants](https://howmanyplants.com/about)
 
@@ -68,24 +46,23 @@
 
 知名的免费图库，偶尔需要一些封面图时，可以来找一下。
 
-6、[Stable Diffusion最全面介绍](https://mp.weixin.qq.com/s/Q4ZYjUxt22Jsx2W2179C8Q)
+6、[Stable Diffusion 最全面介绍](https://mp.weixin.qq.com/s/Q4ZYjUxt22Jsx2W2179C8Q)
 
 7、[据意查句](https://wantquotes.net/)
 
-清华大学自然语言处理实验室出品的一个AI工具。可以根据你输入描述的意思来查找相应的名言名句，例如输入“树立远大志向”，可以查到歌德的名言“人生之要事在于确立伟大的目标与实现这目标的决心”（现代类名句）、刘禹锡的诗句“少年负志气，信道不从时。”（古诗文类名句）、“人起心发，树起根发”（熟语类名句）等。
+清华大学自然语言处理实验室出品的一个 AI 工具。可以根据你输入描述的意思来查找相应的名言名句，例如输入“树立远大志向”，可以查到歌德的名言“人生之要事在于确立伟大的目标与实现这目标的决心”（现代类名句）、刘禹锡的诗句“少年负志气，信道不从时。”（古诗文类名句）、“人起心发，树起根发”（熟语类名句）等。
 
 小学生写作文有福了。
 
 像上周中秋，我女儿班级布置作业，让朗诵一首中秋有关的诗歌。让你猛一想，还真想不出几首应景而合适的。通过这个工具我找到了一首很不错的古诗：
 
 > 九秋三五夕，此夕正秋中。
-> 
+>
 > 天意一夜别，人心千古同。
-> 
+>
 > 清光消雾霭，皓色遍高空。
-> 
+>
 > 愿把团圆盏，年年对兔宫。
-
 
 8、[糖果日本](https://www.candyjapan.com/)
 
@@ -93,13 +70,13 @@
 
 9、[bokksu](https://www.bokksu.com/)
 
-也是一个外国人，在日本做零食的跨国邮购业务。这个发展要比上一个好，已经拿到了投资，盲盒、B2C商城、亚洲杂货店，已经多元化发展了。
+也是一个外国人，在日本做零食的跨国邮购业务。这个发展要比上一个好，已经拿到了投资，盲盒、B2C 商城、亚洲杂货店，已经多元化发展了。
 
 网站非常精美，每个月的主题都很漂亮，其产品包装和营销，值得借鉴。
 
 10、[disruptingjapan](https://www.disruptingjapan.com/)
 
-一个有关日本IT领域初创企业访谈的网站，内容质量很高。
+一个有关日本 IT 领域初创企业访谈的网站，内容质量很高。
 
 ## 文章
 
@@ -107,13 +84,12 @@
 
 [发表你的作品会增加你的运气](https://github.com/readme/guides/publishing-your-work)
 
-Luck = [Doing Things] * [Telling People]
+Luck = [Doing Things] \* [Telling People]
 
->你做的事情越多，你告诉的人越多，你的幸运表面积就越大。你的幸运表面积越大，你就越有可能在运气流过时抓住它。
+> 你做的事情越多，你告诉的人越多，你的幸运表面积就越大。你的幸运表面积越大，你就越有可能在运气流过时抓住它。
 
 这也是我为什么决定开始写文章的理由。
 
 ## 软件
 
 本周忙于开发一个新的通用采集程序，没有尝试新产品。
-
