--- a/005.md
+++ b/005.md
@@ -1,88 +1,48 @@
 # 沧海周报 005/2022.10.01
 
-
-
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
-- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
-
-如有沟通与合作，请发邮件到 **534929089#qq.com**
-
-
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
-1、[money.js](https://openexchangerates.github.io/money.js/ )
+1、[money.js](https://openexchangerates.github.io/money.js/)
 
 简单的 JavaScript 汇率转换库，没有依赖关系，只需 1 kb。
 
+2、[DALL·E ](https://openai.com/blog/dall-e-now-available-without-waitlist/)
 
-
-2、[DALL·E ](https://openai.com/blog/dall-e-now-available-without-waitlist/ )
-
-openai旗下的文字生成图像服务DALL·E正式开放注册，无需等候名单。 
-
-
+openai 旗下的文字生成图像服务 DALL·E 正式开放注册，无需等候名单。
 
 3、[markdoc](https://markdoc.dev/)
 
-Markdoc 是一个基于 Markdown 的语法和工具链，用于创建自定义文档网站。Stripe公司创建了Markdoc 来为其公共文档提供支持。
-
-
+Markdoc 是一个基于 Markdown 的语法和工具链，用于创建自定义文档网站。Stripe 公司创建了 Markdoc 来为其公共文档提供支持。
 
 4、[ffmpeg-buddy](https://evanhahn.github.io/ffmpeg-buddy/)
 
-ffmpeg参数繁多，这个网页可以帮你生成ffmpeg命令。
+ffmpeg 参数繁多，这个网页可以帮你生成 ffmpeg 命令。
 
+5、[Koala 聊开源](https://space.bilibili.com/489667127/video)
 
-
-5、[Koala聊开源](https://space.bilibili.com/489667127/video)
-
-一个B站上的Hacker News 周报，每周一期视频，快速浏览 Hacker News 精选。有提供文字稿。
-
-
+一个 B 站上的 Hacker News 周报，每周一期视频，快速浏览 Hacker News 精选。有提供文字稿。
 
 ## 工具
 
 1、[Typroa](https://typora.io/)
 
-一款 极简风格的Markdown 编辑器和阅读器。支持实时预览 / 图片与文字 / 代码块 / 数学公式 / 图表/目录大纲 / 文件管理 / 导入与导出等功能。
+一款 极简风格的 Markdown 编辑器和阅读器。支持实时预览 / 图片与文字 / 代码块 / 数学公式 / 图表/目录大纲 / 文件管理 / 导入与导出等功能。
 
-这款软件曾经免费多年，今年开始收费模式，我曾转用Obsidian。但是一段时间后还是决定转回来，这款工具在编写文档方面，非常流畅好用，能极大提高效率。
-
-
+这款软件曾经免费多年，今年开始收费模式，我曾转用 Obsidian。但是一段时间后还是决定转回来，这款工具在编写文档方面，非常流畅好用，能极大提高效率。
 
 2、[AnyTxt](https://anytxt.net/)
 
 具有强大全文搜索引擎的桌面搜索工具。免费的谷歌桌面搜索替代方案。
 
-最近我在找windows下的全文搜索方案，我的需求是查找特定的几个目录，主要是md文档和一些代码片段。发现这个软件非常强大。当然后面我选择了更轻便的解决方案：VS Code自带的全局搜索**ctrl+shift+f**已经足够好用。
-
-
+最近我在找 windows 下的全文搜索方案，我的需求是查找特定的几个目录，主要是 md 文档和一些代码片段。发现这个软件非常强大。当然后面我选择了更轻便的解决方案：VS Code 自带的全局搜索**ctrl+shift+f**已经足够好用。
 
 3、[SQLiteStudio](https://www.sqlitestudio.pl/)
 
-创建、编辑、浏览 SQLite 数据库。一款功能强大、稳定、轻便的SQLite 数据库管理软件。
-
-
+创建、编辑、浏览 SQLite 数据库。一款功能强大、稳定、轻便的 SQLite 数据库管理软件。
 
 ## 文章
 
@@ -90,21 +50,10 @@ ffmpeg参数繁多，这个网页可以帮你生成ffmpeg命令。
 
 这篇文章认为图书和讲座这种形式，在教学上的效率太低了。他们提出了一些理论和改进的方法。还是蛮有意思的。
 
-在我看来，发展了几千年，人类的教育媒介的确是有点落后了。仅看当前，我们能够利用的能力是挺多的，音乐、视频、交互动画、游戏、VR、AR、AI。但是整个社会还没有投入足够的资源来改进教育的效率。我认为这个是非常重要的事情，应该也存在创业的空间。假如说全国有几百万学生，每个人的学习效率和学习效果原来是1，利用了更先进的工具，能够提升10%，那么每天复利，一代人下来，会有多大的差别。也可能是理想主义的呓语了。
-
-
+在我看来，发展了几千年，人类的教育媒介的确是有点落后了。仅看当前，我们能够利用的能力是挺多的，音乐、视频、交互动画、游戏、VR、AR、AI。但是整个社会还没有投入足够的资源来改进教育的效率。我认为这个是非常重要的事情，应该也存在创业的空间。假如说全国有几百万学生，每个人的学习效率和学习效果原来是 1，利用了更先进的工具，能够提升 10%，那么每天复利，一代人下来，会有多大的差别。也可能是理想主义的呓语了。
 
 ## 电影
 
-本周在B站看了一部日本的青春校园电影[《鸟女》](https://movie.douban.com/subject/26808248/)，讲在大学里面搞人力飞行小组的故事。剧情很简单，轻松解压，适合放松心情。
+本周在 B 站看了一部日本的青春校园电影[《鸟女》](https://movie.douban.com/subject/26808248/)，讲在大学里面搞人力飞行小组的故事。剧情很简单，轻松解压，适合放松心情。
 
 ![](https://img2.doubanio.com/view/photo/l/public/p2464852652.webp)
-
-
-
-
-
-
-
-
-
