--- a/019.md
+++ b/019.md
@@ -2,31 +2,13 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用 Aardio 开发 Windows 桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，Openresty 和一点点 Lua 。
-- 前端：简单的 html + CSS ，目前在学习 Tailwind CSS 和 React 。
-
-如有沟通与合作，请发邮件到 **dylanzhangdev#outlook.com**
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
 1、[HN Search](https://hn.algolia.com/)
 
-今天才发现Hacker News有一个非常棒的实时全文搜索引擎。国内可以直接访问，并且速度很不错。利用这个[API](https://hn.algolia.com/api)来代替官方API，可以降低请求次数和提高访问速度。有时间可以将[Ask HN](https://www.seazhang.com/ask-hn)重构一下。
+今天才发现 Hacker News 有一个非常棒的实时全文搜索引擎。国内可以直接访问，并且速度很不错。利用这个[API](https://hn.algolia.com/api)来代替官方 API，可以降低请求次数和提高访问速度。有时间可以将[Ask HN](https://www.seazhang.com/ask-hn)重构一下。
 
 2、[fossjobs](https://www.fossjobs.net/)
 
@@ -34,7 +16,7 @@
 
 3、[AutoHotkey](https://wyagd001.github.io/v2/docs/index.htm)
 
-一个Windows平台的自动化脚本工具，看起来非常强大，定位有点类似于国产的按键精灵，但是会更强大、灵活和免费，当然上手难度可能要更大一点。暂时没有想到什么好的使用场景，它能做到的事情，使用Aardio应该都能做到。
+一个 Windows 平台的自动化脚本工具，看起来非常强大，定位有点类似于国产的按键精灵，但是会更强大、灵活和免费，当然上手难度可能要更大一点。暂时没有想到什么好的使用场景，它能做到的事情，使用 Aardio 应该都能做到。
 
 ## 网站
 
@@ -46,15 +28,15 @@
 
 杰森·茨威格收集的有关查理芒格的资源。作为一个芒格的粉丝，我也喜欢[这个网站](https://jasonzweig.com/)。
 
-3、[查理*芒格-25iq](https://25iq.com/quotations/charlie-munger/)
+3、[查理\*芒格-25iq](https://25iq.com/quotations/charlie-munger/)
 
-有关查理*芒格的言行、观点的一些集合。
+有关查理\*芒格的言行、观点的一些集合。
 
 ## SaaS
 
 1、[helloello](https://www.helloello.com/)
 
-AI与儿童阅读结合的一家创业公司，我觉得非常有想法，并且看起来前景很不错。
+AI 与儿童阅读结合的一家创业公司，我觉得非常有想法，并且看起来前景很不错。
 
 2、[detangle](https://detangle.ai/)
 
@@ -68,7 +50,7 @@ AI与儿童阅读结合的一家创业公司，我觉得非常有想法，并且
 
 > 美国股市的平均年回报率是多少？
 >
-> 过去151年（1871年至2022年）美国股市平均年回报率为8.4%；请注意，这是所有年份的“简单”平均值（也称为“算术”平均值）。美国股市自始至终的年化回报率（也称为“几何”平均）为每年 6.9%。这表示如果您在整个期间进行投资，您将获得的复合年回报率。
+> 过去 151 年（1871 年至 2022 年）美国股市平均年回报率为 8.4%；请注意，这是所有年份的“简单”平均值（也称为“算术”平均值）。美国股市自始至终的年化回报率（也称为“几何”平均）为每年 6.9%。这表示如果您在整个期间进行投资，您将获得的复合年回报率。
 
 ![Rolling-Returns-1074](https://themeasureofaplan.com/wp-content/uploads/2023/01/Rolling-Returns-1074.png)
 
@@ -82,26 +64,26 @@ AI与儿童阅读结合的一家创业公司，我觉得非常有想法，并且
 
 2、[将我们最大的移动应用程序迁移到 React Native](https://shopify.engineering/migrating-our-largest-mobile-app-to-react-native)
 
-Shopify公司发布的一篇技术文章，分享他们如何将原生移动应用迁移到React Native。
+Shopify 公司发布的一篇技术文章，分享他们如何将原生移动应用迁移到 React Native。
 
 3、[Ask HN: What are you working on this year?](https://hackerweb.app/#/item/34220710)
 
-又一篇我认为非常高质量的HackNews讨论帖，虽然里面很多人是在给自己打广告，但是可以开拓眼界，了解世界之大，其他人的想法和创意，还是有非常高的参考价值。
+又一篇我认为非常高质量的 HackNews 讨论帖，虽然里面很多人是在给自己打广告，但是可以开拓眼界，了解世界之大，其他人的想法和创意，还是有非常高的参考价值。
 
 比如这个[horserecords](https://horserecords.info/)网站，如果没有通过这个帖子，很难发现这种小众的利基市场。
 
 4、[我的 Youtube 收入](https://brickexperimentchannel.wordpress.com/2022/11/19/my-youtube-earnings/)
 
-一个Youtube的乐高视频博主，分享了他的频道4年多的收入分析，非常有参考价值。对于想通过视频内容创业的人，可以了解一下真实世界的参照。
+一个 Youtube 的乐高视频博主，分享了他的频道 4 年多的收入分析，非常有参考价值。对于想通过视频内容创业的人，可以了解一下真实世界的参照。
 
 > 订阅者：290 万
 >
 > 视频观看：7.05 亿
 >
-> 上传视频：65个
+> 上传视频：65 个
 >
 > 总收入：664000 美元
 >
 > 每月平均收入：12500 美元
 >
-> 基于播放的每千次展示费用：3.20美元
+> 基于播放的每千次展示费用：3.20 美元
