--- a/021.md
+++ b/021.md
@@ -8,35 +8,17 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用 Aardio 开发 Windows 桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，Openresty 和一点点 Lua 。
-- 前端：简单的 html + CSS ，目前在学习 Tailwind CSS 和 React 。
-
-如有沟通与合作，请发邮件到 **dylanzhangdev#outlook.com**
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
 1、[gutenberg](https://www.gutenberg.org/)
 
-古腾堡工程是一个在线图书馆，拥有超过6万本免费电子书，可以直接在线阅读或下载，没有任何限制。
+古腾堡工程是一个在线图书馆，拥有超过 6 万本免费电子书，可以直接在线阅读或下载，没有任何限制。
 
 2、[pandoc](https://pandoc.org/index.html)
 
-如果你需要将文件转换为另一种格式，pandoc将是你的瑞士军刀，它可以转换数十种常见的文档格式。
+如果你需要将文件转换为另一种格式，pandoc 将是你的瑞士军刀，它可以转换数十种常见的文档格式。
 
 3、[iconbolt](https://www.iconbolt.com/)
 
@@ -44,23 +26,23 @@
 
 4、[Objection.js](https://vincit.github.io/objection.js/)
 
-> Objection.js 是一个Node.js的ORM库 ，其目的是让您尽可能轻松地使用 SQL 和底层数据库引擎的全部功能，同时仍然使常见的事情变得简单和愉快。
+> Objection.js 是一个 Node.js 的 ORM 库 ，其目的是让您尽可能轻松地使用 SQL 和底层数据库引擎的全部功能，同时仍然使常见的事情变得简单和愉快。
 
 5、[backblaze](https://www.backblaze.com/b2/cloud-storage-pricing.html)
 
-一个国外的云存储服务，比亚马逊和微软便宜很多，并且设置比较简单，有免费10G空间。
+一个国外的云存储服务，比亚马逊和微软便宜很多，并且设置比较简单，有免费 10G 空间。
 
 ## 浏览器插件
 
-本周看一个JS逆向课程中，了解到几个实用的浏览器插件，记录一下：
+本周看一个 JS 逆向课程中，了解到几个实用的浏览器插件，记录一下：
 
-EditThisCookie：编辑和复制浏览器cookie。
+EditThisCookie：编辑和复制浏览器 cookie。
 
-Toggle JavaScript：快捷禁用网页上的js，可以直观看到通过代码请求的效果。
+Toggle JavaScript：快捷禁用网页上的 js，可以直观看到通过代码请求的效果。
 
-Tampermonkey: 大名鼎鼎的油猴，除了可以使用别人提供的脚本，在爬虫逆向时，可以导入自定义的js hook。
+Tampermonkey: 大名鼎鼎的油猴，除了可以使用别人提供的脚本，在爬虫逆向时，可以导入自定义的 js hook。
 
-reres: js文件替换神器。
+reres: js 文件替换神器。
 
 另外，在不使用魔法时，谷歌扩展商店无法访问，[extfans](https://www.extfans.com/)可以做为一个替代。
 
@@ -68,11 +50,11 @@ reres: js文件替换神器。
 
 1、[rachsmith](https://rachsmith.com/)
 
-一个前端开发人员的个人网站，非常绚丽活波。这个网站的标签元素样式我很喜欢，我用[React组件](https://rtnc.seazhang.com/components/buttons)实现了一个类似的。
+一个前端开发人员的个人网站，非常绚丽活波。这个网站的标签元素样式我很喜欢，我用[React 组件](https://rtnc.seazhang.com/components/buttons)实现了一个类似的。
 
 2、[kaneshin](https://kaneshin.shop2.multilingualcart.com/index_en_JPY.html)
 
-兼进剪刀，一个日本的盆栽用刃具品牌，支持全球邮购。我是通过其在谷歌adsense的广告点进去的。这种高单价、高毛利、小众专业的电商网站，通过广告投放ROI会怎样呢？也许是一个很不错的思路。
+兼进剪刀，一个日本的盆栽用刃具品牌，支持全球邮购。我是通过其在谷歌 adsense 的广告点进去的。这种高单价、高毛利、小众专业的电商网站，通过广告投放 ROI 会怎样呢？也许是一个很不错的思路。
 
 ## 文章
 
@@ -88,7 +70,7 @@ reres: js文件替换神器。
 
 3、[摩尔定律适用于一切](https://moores.samaltman.com/)
 
-人工智能的当红炸子鸡OpenAI的创始人、CEO，Sam Altman在2021年发表的一篇文章。大佬不愧是大佬，思考问题的深度和解决问题的思路都令人耳目一新。
+人工智能的当红炸子鸡 OpenAI 的创始人、CEO，Sam Altman 在 2021 年发表的一篇文章。大佬不愧是大佬，思考问题的深度和解决问题的思路都令人耳目一新。
 
 摘录一些我个人有触动的句子：
 
