--- a/001.md
+++ b/001.md
@@ -2,29 +2,7 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
-- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
-
-如有沟通与合作，请发邮件到 **534929089#qq.com**
-
-
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
