--- a/004.md
+++ b/004.md
@@ -2,43 +2,22 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用Aardio开发windows桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，openresty 和一点点 lua 。
-- 前端：简单的 html + css ，目前在学习 tailwind css 和vue3 。
-
-如有沟通与合作，请发邮件到 **534929089#qq.com**
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
 1、[百度文心大模型](https://wenxin.baidu.com/moduleApi/ernieVilg)
 
-百度推出的AI文字生成图片模型。目前测试看还是比不上国外的，但是多个选择总是好的。
+百度推出的 AI 文字生成图片模型。目前测试看还是比不上国外的，但是多个选择总是好的。
 希望能有更好的发展和投入，而不是跟风凑热点。
 
 我测试了一个：
 
->prompt：中国北方农村的田野黄土路上，低矮的野草干枯了，上面有白色的霜降。
+> prompt：中国北方农村的田野黄土路上，低矮的野草干枯了，上面有白色的霜降。
 
-等待30秒，给出6个图里面，有2个我觉得还算符合要求：
+等待 30 秒，给出 6 个图里面，有 2 个我觉得还算符合要求：
 
 ![](https://wenxin.baidu.com/younger/file/ERNIE-ViLG/d1790c1c09e9d193a4dbb3b4d2045f01ex)
-
 
 ![](https://wenxin.baidu.com/younger/file/ERNIE-ViLG/d1790c1c09e9d193a4dbb3b4d2045f01i4)
 
@@ -48,11 +27,11 @@
 
 3、[Hacker News](https://news.ycombinator.com/news)
 
-保罗·格雷厄姆旗下的黑客新闻，这里包罗万象，经常可以发现很优秀的独立博客和有价值的文章。我每周会刷2-3次。
+保罗·格雷厄姆旗下的黑客新闻，这里包罗万象，经常可以发现很优秀的独立博客和有价值的文章。我每周会刷 2-3 次。
 
 4、[staysaasy](https://staysaasy.com/about.html)
 
-一个讨论初创SaaS团队如何增长的独立博客。每周更新1-2篇。
+一个讨论初创 SaaS 团队如何增长的独立博客。每周更新 1-2 篇。
 
 5、[starterstory](https://www.starterstory.com/explore)
 
@@ -62,14 +41,14 @@
 
 1、[微信公众号格式编辑器](https://lab.lyric.im/wxformat/)
 
-可以将md文档转换为微信公众号样式，有漂亮的引用和红色加粗。我目前就在使用这个工具。
+可以将 md 文档转换为微信公众号样式，有漂亮的引用和红色加粗。我目前就在使用这个工具。
 
 ## 其他
 
 1、TLDR
 
-看一些英文文章，开头经常有这个词，原来是Too Long; Didn't Read，后面跟着文章的总结。用中文说，就是：一句话总结。
+看一些英文文章，开头经常有这个词，原来是 Too Long; Didn't Read，后面跟着文章的总结。用中文说，就是：一句话总结。
 
 2、泡温泉
 
-周六去长泰半月山温泉放松了下。从厦门开车过去40分钟就到。住了一晚酒店反而多余，长泰当地并没有什么好玩的地方，天柱山大世界和长泰漂流不值得体验。下次再去玩可以当天去当天回，冬天泡泡温泉还是比较惬意的。
+周六去长泰半月山温泉放松了下。从厦门开车过去 40 分钟就到。住了一晚酒店反而多余，长泰当地并没有什么好玩的地方，天柱山大世界和长泰漂流不值得体验。下次再去玩可以当天去当天回，冬天泡泡温泉还是比较惬意的。
