--- a/017.md
+++ b/017.md
@@ -2,45 +2,27 @@
 
 ## 这是啥
 
-这里记录每周我所见所思，有用有趣之处，择其要点而记录。
-
-目的：
-
-1、 方便自己日后回顾，有需要时可以全文检索。
-
-2、如果能有所传播，可以结交志同道合的朋友。
-
-## 我是谁
-
-沧海，现居福建厦门，独立软件开发者。
-
-技术栈：
-
-- 用 Aardio 开发 Windows 桌面软件，主要是爬虫和自动化。
-- 后端：Python 的 flask 框架，Openresty 和一点点 Lua 。
-- 前端：简单的 html + CSS ，目前在学习 Tailwind CSS 和 React 。
-
-如有沟通与合作，请发邮件到 **dylanzhangdev#outlook.com**
+作者介绍及往期周报，请移步[README](https://github.com/theseazhang/weekly_news/blob/main/README.md)。
 
 ## 资源
 
 1、[react-native-the-practical-guide](https://www.bilibili.com/video/BV1FP4y1M7j2/)
 
-B站搬运的一个Udemy付费课程，这个作者Maximilian的系列课程质量都很不错，深入浅出，很容易理解。
+B 站搬运的一个 Udemy 付费课程，这个作者 Maximilian 的系列课程质量都很不错，深入浅出，很容易理解。
 
 2、[Text Blaze](https://blaze.today/)
 
-一款Chrome插件，通过制作快捷回复提升文本工作的效率。本周最有启发的一个产品。因为前几天我用Aardio做了一个小demo，可以实现在任意窗口鼠标光标处快速输入模版语句。这个产品有很多值得借鉴的地方。为什么想做这样一个东西，因为我讨厌任何的重复工作。效率提升也是很好的需求点，节省时间就是节省金钱。
+一款 Chrome 插件，通过制作快捷回复提升文本工作的效率。本周最有启发的一个产品。因为前几天我用 Aardio 做了一个小 demo，可以实现在任意窗口鼠标光标处快速输入模版语句。这个产品有很多值得借鉴的地方。为什么想做这样一个东西，因为我讨厌任何的重复工作。效率提升也是很好的需求点，节省时间就是节省金钱。
 
 3、[divjoy](https://divjoy.com/)
 
-React代码生成器，专门为初创SaaS团队准备的，提供样板代码，可以快速启动你的业务。我买过类似的服务，[Tailwind UI](https://tailwindui.com/templates)，199美元终身可用，几百个组件和6个网站模板。的确是物超所值，因为可以大大节省时间，无需从零开始。如果是新手的话，还能学习到很多项目架构和组件编写的实战技巧。
+React 代码生成器，专门为初创 SaaS 团队准备的，提供样板代码，可以快速启动你的业务。我买过类似的服务，[Tailwind UI](https://tailwindui.com/templates)，199 美元终身可用，几百个组件和 6 个网站模板。的确是物超所值，因为可以大大节省时间，无需从零开始。如果是新手的话，还能学习到很多项目架构和组件编写的实战技巧。
 
 ## 文章
 
 1、[编程的终结](https://cacm.acm.org/magazines/2023/1/267976-the-end-of-programming/fulltext)
 
-这篇文章可能道出很多人的困惑，随着AI的发展，学习传统的那些增删改查、数据结构还有意义吗？编程本身就是从低级到高级不断发展的，最早的程序员要懂C、C++，而Python、Javascrit这些语言让程序员不太需要去关心底层实现。现在很多模版代码都可以自动生成，很多框架开箱即用，甚至是低代码平台。可能未来计算机教育还有程序员的工作模式都会有很大变化了。
+这篇文章可能道出很多人的困惑，随着 AI 的发展，学习传统的那些增删改查、数据结构还有意义吗？编程本身就是从低级到高级不断发展的，最早的程序员要懂 C、C++，而 Python、Javascrit 这些语言让程序员不太需要去关心底层实现。现在很多模版代码都可以自动生成，很多框架开箱即用，甚至是低代码平台。可能未来计算机教育还有程序员的工作模式都会有很大变化了。
 
 2、[我如何将一个简单的纸牌游戏发展到 10，000 美元的 MRR](https://www.indiehackers.com/post/how-i-grew-a-simple-solitaire-game-to-10k-mrr-28e352c308)
 
