--- a/026.md
+++ b/026.md
@@ -12,7 +12,7 @@
 
 2、[tailblocks](https://tailblocks.cc/)
 
-> This project provides multiple blocks built using Tailwind CSS that you can use in your own projects. > This project is not a dependency that you add to your project, but instead provides you with HTML that > you can easily copy and paste into your own project.
+> This project provides multiple blocks built using Tailwind CSS that you can use in your own projects. This project is not a dependency that you add to your project, but instead provides you with HTML that you can easily copy and paste into your own project.
 
 3、[konstaui](https://konstaui.com/)
 
