--- a/030.md
+++ b/030.md
@@ -22,7 +22,7 @@
 
 1、[我从查理芒格那里学到的关于护城河的 12 件事](https://25iq.com/2015/10/10/a-dozen-things-ive-learned-from-charlie-munger-about-moats/)
 
-> 一个人来找莫扎特，问他如何写交响曲。莫扎特回答说：“你太年轻了，写不出交响乐。那人说：“你 10 岁的时候就在写交响乐，而我已经 21 岁了。莫扎特说：“是的，但我没有跑来跑去问人们怎么做。
+> 一个人来找莫扎特，问他如何写交响曲。莫扎特回答说：“你太年轻了，写不出交响乐。那人说：“你 10 岁的时候就在写交响乐，而我已经 21 岁了”。莫扎特说：“是的，但我没有跑来跑去问人们怎么做”。
 
 我的理解就是，临渊羡鱼，不如退而结网。因为最近在学英语，B 站经常给我推送各种视频：如何学习英语，学习英语的几种方法，这样学英语太棒了。。。五花八门，多少人以教别人零碎的知识为生，特别是自媒体，可以称之为知识的咀嚼者，信息的二道贩子。你看再多的这样的视频，也学不会，不如老老实实去读和听，当然这很枯燥。
 
