--- a/039.md
+++ b/039.md
@@ -6,23 +6,66 @@
 
 ## 资源
 
+1、[计算机专业学习路线](https://hackway.org/docs/cs/intro)
+
+我真希望我上学的时候能够看到这样的东西。
+
+2、[Zeal](https://zealdocs.org/)
+
+Zeal 是一款面向软件开发人员的离线文档浏览器。类似功能但是在线版本的，也有一个[DevDocs](https://devdocs.io/)。
+
 ## 网站
 
-1、[]()
+1、[Public Domain Review](https://publicdomainreview.org/)
+
+> Public Domain Review 致力于探索艺术史、文学史和思想史中令人好奇和引人入胜的作品——重点关注现在已进入公共领域的作品，以及每个人都可以自由访问的大量无版权材料不受限制地享受、分享和构建。
+
+吸引我的是，上面有很多怪异而又好玩的图片，风格复古而独特。
 
 2、本周的几个博客：
 
-- [KIRU](https://kiru.io/)
-- [Matt Sephton](https://www.gingerbeardman.com/)
-- [Andreas Fragner](https://www.andreasfragner.com/)
-- [Engineers Need Art](https://www.engineersneedart.com/index.html)
+- [Irrational Exuberance](https://lethain.com/)
+- [fastpages](https://fastpages.fast.ai/)
+- [MDN 博客](https://developer.mozilla.org/en-US/blog/)
+- [Matt Blewitt](https://matt.blwt.io/)
+- [koding kitty blog](https://www.kodingkitty.com/blog/)
+- [The Tangled Woof](https://andrewbatson.com/)
 
-3、[]()
+3、本周我花了点时间调研面向外国人学中文的网站，记录下目前整理的资源：
+
+- [Hacking Chinese](https://www.hackingchinese.com/)
+- [LINE Dictionary 汉英词典](https://dict.naver.com/linedict/zhendict/dict.html#/cnen/home)
+- [pinyin.info](https://pinyin.info/index.html)
+- [故事筷](https://storychopsticks.com/)
+- [chineseclass101](https://www.chineseclass101.com/)
+- [Yoyo Chinese](https://yoyochinese.com/)
+- [The Chairman’s Bao](https://www.thechairmansbao.com/)
+- [StoryLearning Online Chinese Courses](https://storylearning.com/learn/chinese/chinese-courses)
+- [唐人街汉语](https://www.learn-chinese.com/everyday-chinese-for-beginners/)
+
+还有 2 个有用的资源：
+
+- [pinyin-pro 汉字拼音转换库](https://pinyin-pro.cn/)
+- [汉典](https://www.zdic.net/)
+
+4、[LOC Serendipity](https://www.locserendipity.com/)
+
+> LOC Serendipity 是一个网站，汇集了国会图书馆提供的开放数字记录的子集。每次点击页面顶部的按钮，该网站都会提供一份图书馆免费图书列表，可通过 archive.org 获取。
 
 ## 文章
 
+1、[我们把事情写下来以便忘记](https://www.reproof.app/blog/notes-apps-help-us-forget)
+
+> Notes apps are where ideas go to die. And that’s good.Insurance for your mind.
+
+2、[为什么人们奖励天赋而不是努力工作](https://www.bbc.com/worklife/article/20230517-why-people-reward-innate-talent-over-hard-work)
+
+> 最近的心理学研究表明，过分强调努力工作的重要性可能会在许多专业情况下适得其反——这要归功于一种被称为“自然偏见”的现象。与那些必须通过努力取得成功的人相比，人们更尊重那些有天赋的人。
+
 ## 阅读
+
+本周 Kids A-Z 阅读绘本 6 篇，进入 P 级。最近办公室搬家，杂事太多，回去以后累得腰酸背疼，实在是无心阅读。
 
 ## 影视
 
-看了《全裸导演》第二季，如果让我一句话总结，就是成住坏空。这剧挺对我的癖好，在我这里打 9 分以上，推荐观看。
+睡前和午休时间刷了《怪奇物语》，很有复古感的一部优质奇幻美剧。
